        Reviewed by Darin Adler.

REGRESSION (r82320): Spacebar no longer pages down
        https://bugs.webkit.org/show_bug.cgi?id=57423
        <rdar://problem/9207702>

        Also includes some unrelated cleanup that I had in my tree.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _interpretKeyEvent:savingCommands:]): Added an assertion that the event is
        being dispatched to the right frame.
        (-[WebHTMLView setMarkedText:selectedRange:]): Use 0 for a pointer, not NULL.
        (-[WebHTMLView doCommandBySelector:]): Update eventInterpretationHadSideEffects with "|=".
        Even if this specific command hasn't been handled, that doesn't nullify side effects from
        previous commands.
        (-[WebHTMLView insertText:]): Besides looking at the return value of insertText() to fix the
        bug, removed setting _private->interpretKeyEventsParameters to 0. I don't see any way for
        another WebHTMLView NSTextInput method to be called from within insertText:, so no one is
        going to look at it.



Canonical link: https://commits.webkit.org/72294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82497 268f45cc-cd09-0410-ab3c-d52691b4dbfc